syntax = "proto3";

import "proto/data/common.proto";

package data;

option java_outer_classname = "ContainerSummaryProtos";

message ContainerSummary {
    message Event {
        string actor                   = 1;
        string action                  = 2;
        string id                      = 3;
        map<string, string> attributes = 4;
        int64 time                     = 5;
        string action_args             = 6;
    }

    message Image {
        // Name is always the first repo tag (i.e., `repoTag[0]`)
        string name                 = 1;
        string id                   = 2;
        repeated string repoTags    = 3;
        repeated string repoDigests = 4;

        bool is_whitelisted         = 5;
    }

    message ContainerState {
        bool running        = 1;
        bool paused         = 2;
        bool restarting     = 3;
        bool oom_killed     = 4;
        bool dead           = 5;
        int32 pid           = 6;
        int32 exit_code     = 7;
        string error        = 8;
        string started_at   = 9;
        string finished_at  = 10;
    }

    message Mount {
        string type     = 1;
        string source   = 2;
        string target   = 3;
        bool readonly   = 4;
    }

    message HostConfig {
        repeated string binds           = 1;
        string network_mode             = 2;
        repeated PortBinding ports      = 3;
        repeated string volumes_from    = 4;
        repeated string cap_add         = 5;
        repeated string cap_drop        = 6;
        repeated string dns             = 7;
        repeated string dns_options     = 8;
        repeated string dns_search      = 9;
        repeated string group_add       = 10;
        string ipc_mode                 = 11;
        string cgroup                   = 12;
        repeated string links           = 13;
        string pid_mode                 = 14;
        bool privileged                 = 15;
        bool publish_all_ports          = 16;
        bool readonly_rootfs            = 17;
        repeated string security_opt    = 18;
        map<string,string> storage_opt  = 19;
        map<string,string> tmpfs        = 20;
        string uts_mode                 = 21;
        string userns_mode              = 22;
        map<string,string>  sysctls     = 23;
        string runtime                  = 24;
        string isolation                = 25;
        repeated Mount mounts           = 26;
    }

    message MountPoint {
        string type         = 1;
        string name         = 2;
        string source       = 3;
        string destination  = 4;
        string mode         = 5;
        string propagation  = 6;
        bool rw             = 7;
    }

    message Config {
        string host_name                = 1;
        string domain_name              = 2;
        string user                     = 3;
        repeated Port exposed_ports     = 4;
        repeated string env             = 5;
        repeated string cmd             = 6;
        string image                    = 7;
        repeated string volumes         = 8;
        string working_dir              = 9;
        repeated string entrypoint      = 10;
        bool network_disabled           = 11;
        map<string,string> labels       = 12;
        repeated string shell           = 13;
    }

    message Port {
        string connection_type  = 1;
        string port             = 2;
    }

    message HostBind {
        string host_ip   = 1;
        string host_port = 2;
    }

    message PortBinding {
        Port container_port             = 1;
        repeated HostBind host_bindings = 2;
    }

    message NetworkSettings {
        string bridge                           = 1;
        repeated PortBinding ports              = 2;
        repeated string secondary_ip_addresses  = 3;
        string gateway                          = 4;
        string ip_address                       = 5;
        repeated Network networks               = 6;
    }

    message Network {
        string name                 = 1;
        repeated string aliases     = 2;
        string network_id           = 3;
        string gateway              = 4;
        string ip_address           = 5;
    }

    message Container {
        string id                           = 1;
        string created                      = 2;
        string path                         = 3;
        repeated string args                = 4;
        ContainerState state                = 5;
        string image                        = 6;
        string name                         = 7;
        string mount_label                  = 8;
        string process_label                = 9;
        HostConfig host_config              = 10;
        Config config                       = 11;
        repeated MountPoint mounts          = 12;
        NetworkSettings network_settings    = 13;
        bool is_stackrox                    = 14;
    }

    Container container        = 1;
    Event event                = 2;
    Image image                = 3;
    UUID id                    = 4;
    int64 timestamp            = 5;
    string host                = 6;
    repeated Process processes = 7;
    UUID cluster_id            = 8;
}
